# libHybridGrains

./: .gitignore  CMakeLists.txt  CMakeListsClangCXXFlags.txt  CMakeListsGNUCXXFlags.txt  CMakeListsIntelCXXFlags.txt  README.md  get_dependencies.sh  remove_dependencies.sh
assets/hybridgrains2dnew/column-collapse/: dem.xml  hybrid.xml  mpm.xml
assets/hybridgrains2dnew/hourglass/: dem.xml  hybrid.xml  mpm.xml
cmake/: FindCairo.cmake  FindMKL.cmake  FindQhull.cmake
hybridgrains2dnew/: AvoidAvoid.cpp  AvoidAvoid.h  CMakeLists.txt  CMakeSourceFiles.txt  CircleRectangleIntersection.cpp  CircleRectangleIntersection.h  Coupling.cpp  Coupling.h  DiscreteIntegrator.cpp  DiscreteIntegrator.h  Grid.cpp  Grid.h  HybridDefinitions.h  HybridGrains2DSim.cpp  HybridGrains2DSim.h  HybridIntegratorState.cpp  HybridIntegratorState.h  MPMIntegrator.cpp  MPMIntegrator.h  ResamplingTools.cpp  ResamplingTools.h  ZoneTools.cpp  ZoneTools.h  distgrid.cpp  distgrid.h  levelsetutil.cpp  levelsetutil.h  quadtree.h  random.c  random.h  uniformgrid.cpp  uniformgrid.h
hybridgrains2dnewcli/: CMakeLists.txt  CMakeSourceFiles.txt  hybridgrains2d_cli.cpp
hybridgrains2dnewqt4/: CMakeLists.txt  CMakeSourceFiles.txt  ContentWidget.cpp  ContentWidget.h  DisplayController2D.cpp  DisplayController2D.h  GLCircleRenderer2D.cpp  GLCircleRenderer2D.h  GLWidget.cpp  GLWidget.h  Window.cpp  Window.h  hybridgrains2dnew_qt4.cpp
hybridgrains2dnewutils/: CMakeLists.txt  CMakeSourceFiles.txt  HybridGrains2DSceneParser.cpp  HybridGrains2DSceneParser.h
mpmgrains2d/: BasisFunctions.cpp  BasisFunctions.h  CMakeLists.txt  CMakeSourceFiles.txt  CompileDefinitions.h  CompileDefinitions.h.in  ConstitutiveModel.cpp  ConstitutiveModel.h  CubicBasisFunctions.cpp  CubicBasisFunctions.h  ExplicitIntegrator.cpp  ExplicitIntegrator.h  InitialSimulationState.cpp  InitialSimulationState.h  LinearBasisFunctions.cpp  LinearBasisFunctions.h  MaterialPoints.cpp  MaterialPoints.h  MathDefines.h  PhysicsGrid.cpp  PhysicsGrid.h  SimulationState.cpp  SimulationState.h  StaticPlane.cpp  StaticPlane.h  uGIMPLinearBasisFunctions.cpp  uGIMPLinearBasisFunctions.h
mpmgrains2d_cli/: CMakeLists.txt  CMakeSourceFiles.txt  mpmgrains2d_cli.cpp
mpmgrains2d_qt4/: CMakeLists.txt  CMakeSourceFiles.txt  ContentWidget.cpp  ContentWidget.h  GL2DCircleRenderer.cpp  GL2DCircleRenderer.h  GLWidget.cpp  GLWidget.h  TwoDimensionalDisplayController.cpp  TwoDimensionalDisplayController.h  Window.cpp  Window.h  mpmgrains_2d_qt4.cpp
mpmgrains2dutils/: CMakeLists.txt  CMakeSourceFiles.txt  MPMGrains2DParser.cpp  MPMGrains2DParser.h
rigidbody2d/: AnnulusGeometry.cpp  AnnulusGeometry.h  BodyBodyConstraint.cpp  BodyBodyConstraint.h  BoxBoxTools.cpp  BoxBoxTools.h  BoxGeometry.cpp  BoxGeometry.h  CMakeLists.txt  CMakeSourceFiles.txt  CircleBoxTools.cpp  CircleBoxTools.h  CircleCircleConstraint.cpp  CircleCircleConstraint.h  CircleGeometry.cpp  CircleGeometry.h  ConstraintCache.cpp  ConstraintCache.h  KinematicKickCircleCircleConstraint.cpp  KinematicKickCircleCircleConstraint.h  KinematicObjectCircleConstraint.cpp  KinematicObjectCircleConstraint.h  NearEarthGravityForce.cpp  NearEarthGravityForce.h  PenaltyImpactFrictionMap.cpp  PenaltyImpactFrictionMap.h  PlanarPortal.cpp  PlanarPortal.h  PythonScripting.cpp  PythonScripting.h  RigidBody2DForce.cpp  RigidBody2DForce.h  RigidBody2DGeometry.cpp  RigidBody2DGeometry.h  RigidBody2DIntegratorSettings.h  RigidBody2DSim.cpp  RigidBody2DSim.h  RigidBody2DState.cpp  RigidBody2DState.h  RigidBody2DStaticDrum.cpp  (+17 more)
rigidbody2dcli/: rigidbody2d_cli.cpp
rigidbody2dqt4/: AnnulusGeometryRenderer.cpp  AnnulusGeometryRenderer.h  CMakeSourceFiles.txt  ContentWidget.cpp  ContentWidget.h  GLCircleRenderer2D.cpp  GLCircleRenderer2D.h  GLWidget.cpp  GLWidget.h  Window.cpp
rigidbody2dutils/: CMakeLists.txt  CMakeSourceFiles.txt  CairoImage.cpp  CairoImage.h  CairoRenderSettings.cpp  CairoRenderSettings.h  CameraSettings2D.cpp  CameraSettings2D.h  RigidBody2DSceneParser.cpp  RigidBody2DSceneParser.h
scisim/: CMakeLists.txt  CMakeSourceFiles.txt  CompileDefinitions.h  HDF5File.cpp  HDF5File.h  PythonObject.cpp  PythonObject.h  PythonTools.cpp  PythonTools.h  ScriptingCallback.cpp  ScriptingCallback.h  StringUtilities.cpp  StringUtilities.h  Utilities.cpp  Utilities.h
scisim/CollisionDetection/: CollisionDetectionUtilities.cpp  CollisionDetectionUtilities.h
scisim/ConstrainedMaps/: FrictionSolver.cpp  FrictionSolver.h  ImpactFrictionMap.cpp  ImpactFrictionMap.h  NullFrictionSolver.cpp  NullFrictionSolver.h
scisim/ConstrainedMaps/ImpactMaps/: ImpactMap.cpp  ImpactMap.h  ImpactOperator.cpp  ImpactOperator.h  ImpactOperatorUtilities.cpp  ImpactOperatorUtilities.h  ImpactSolution.cpp  ImpactSolution.h
scisim/Constraints/: ConstrainedSystem.cpp  ConstrainedSystem.h  Constraint.cpp  Constraint.h  ContactGraphTools.cpp  ContactGraphTools.h
scisim/Math/: MathDefines.h  MathUtilities.cpp  MathUtilities.h  Rational.h  SparseMatrixIO.cpp  SparseMatrixIO.h
scisim/Timer/: TimeUtils.cpp  TimeUtils.h  Timer.cpp  Timer.h
scisim/UnconstrainedMaps/: FlowableSystem.cpp  FlowableSystem.h  NullUnconstrainedMap.cpp  NullUnconstrainedMap.h  UnconstrainedMap.cpp  UnconstrainedMap.h
scripts_analysis/: render_2D_continuum_configs.py  render_2D_discrete_configs.py  render_2D_hybrid_configs.py
scripts_analysis/hybridgrains2d/: hybrid2d_processing.py
scripts_analysis/mpm2d/: mpm2d_processing.py
scripts_analysis/rigidbody2d/: rb2d_processing.py  rb2d_rendering.py
scripts_include/: get_eigen.sh
